exports[`Snapshot Testing renders correctly when there are errors 1`] = `
<div>
  <div>
    <label>
      Username:
    </label>
    <input
      onChange={[Function onChange]}
      onKeyDown={[Function onKeyDown]}
      value="" />
  </div>
  <div>
    <label>
      Password:
    </label>
    <input
      onChange={[Function onChange]}
      onKeyDown={[Function onKeyDown]}
      type="password"
      value="" />
  </div>
  <p
    className="error">
    test error
  </p>
</div>
`;

exports[`Snapshot Testing renders correctly when there are no errors 1`] = `
<div>
  <div>
    <label>
      Username:
    </label>
    <input
      onChange={[Function onChange]}
      onKeyDown={[Function onKeyDown]}
      value="" />
  </div>
  <div>
    <label>
      Password:
    </label>
    <input
      onChange={[Function onChange]}
      onKeyDown={[Function onKeyDown]}
      type="password"
      value="" />
  </div>
</div>
`;
